css excercise: applying css stylings to the original recipes menu page. Creating css files for all the recipes for future styling.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/Burger.html">Basic Burger</a></li>
-        <li><a href="recipes/Rosemary Chicken.html">Rosemary Grilled Chicken</a></li>
-        <li><a href="recipes/Roasted Potatoes.html">Roasted Potatoes</a></li>
+    <ul class="recipes">
+        <li><a class="burger" href="recipes/Burger.html">Basic Burger</a></li>
+        <li><a class="chicken" href="recipes/Rosemary Chicken.html">Rosemary Grilled Chicken</a></li>
+        <li><a class="potato" href="recipes/Roasted Potatoes.html">Roasted Potatoes</a></li>
     </ul>
 </body>
 
