--- a/recipes/Rosemary Chicken.html
+++ b/recipes/Rosemary Chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosemary Grilled Chicken</title>
+    <link rel="stylesheet" href="chickenStyle.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
